--- a/website/app/application/core/projects/project/processes/create/process-settings.html
+++ b/website/app/application/core/projects/project/processes/create/process-settings.html
@@ -3,6 +3,7 @@
 
     <div class="row" ng-form="settingForm" ng-repeat="setting in settings">
         <div ng-switch="setting.property._type">
+
             <!--------- number --------->
             <div ng-switch-when="number">
                 <label class="col-xs-4 control-label">
@@ -61,6 +62,7 @@
                     <span class="help-block">{{::setting.property.description}}</span>
                 </div>
             </div>
+
             <!--------- string --------->
             <div ng-switch-when="string">
                 <label class="col-xs-4 control-label">
@@ -70,7 +72,7 @@
 
                 <div class="col-xs-6">
                     <input type="text" name="stringInput" class="form-control"
-                           name="stringInput" ng-required="setting.property.required"
+                           ng-required="setting.property.required"
                            ng-model="setting.property.value">
 
                     <div ng-if="mainSettingForm.$submitted || mainSettingForm.$touched"
@@ -81,6 +83,7 @@
                     <span class="help-block">{{::setting.property.description}}</span>
                 </div>
             </div>
+
             <!--------- unknown type --------->
             <div ng-switch-default>
                 <span>Unknown template type {{setting.property._type}}</span>
