--- a/website/app/application/core/projects/project/processes/create/process-settings.html
+++ b/website/app/application/core/projects/project/processes/create/process-settings.html
@@ -1,7 +1,7 @@
 <div>
     <h4>Setup</h4>
 
-    <div class="row" ng-form="settingForm" ng-repeat="setting in settings">
+    <div class="row" ng-form="ctrl.settingForm" ng-repeat="setting in ctrl.settings">
         <div ng-switch="setting.property._type">
 
             <!--------- number --------->
@@ -20,8 +20,8 @@
                                ng-required="setting.property.required"
                                ng-model="setting.property.value">
 
-                        <div ng-if="mainSettingForm.$submitted || mainSettingForm.$touched"
-                             ng-messages="settingForm.numberInput.$error" class="errors">
+                        <div ng-if="ctrl.mainSettingForm.$submitted || ctrl.mainSettingForm.$touched"
+                             ng-messages="ctrl.settingForm.numberInput.$error" class="errors">
                             <div ng-message="number">Please enter number.</div>
                             <div ng-message="required">This is a required field.</div>
                         </div>
@@ -46,7 +46,7 @@
                 </label>
 
                 <div class="col-xs-6">
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <select ng-model="setting.property.value"
                                 data-placeholder="Choose"
                                 name="selectInput" class="form-control"
@@ -54,13 +54,21 @@
                                 ng-required="setting.property.required">
                         </select>
 
-                        <div ng-if="mainSettingForm.$submitted || mainSettingForm.$touched"
-                             ng-messages="settingForm.selectInput.$error" class="errors">
+                        <div ng-if="ctrl.mainSettingForm.$submitted || ctrl.mainSettingForm.$touched"
+                             ng-messages="ctrl.settingForm.selectInput.$error" class="errors">
                             <div ng-message="required">It's a required field.</div>
+                        </div>
+                    </div>
+                    <div ng-if="setting.property.value.name === 'Other'">
+                        <div class="col-xs-6">
+                            <input type="text" class="form-control"
+                                   placeholder="{{setting.attribute.name}}..."
+                                   ng-model="setting.property.value.value">
                         </div>
                     </div>
                     <span class="help-block">{{::setting.property.description}}</span>
                 </div>
+
             </div>
 
             <!--------- string --------->
@@ -75,8 +83,8 @@
                            ng-required="setting.property.required"
                            ng-model="setting.property.value">
 
-                    <div ng-if="mainSettingForm.$submitted || mainSettingForm.$touched"
-                         ng-messages="settingForm.stringInput.$error" class="errors">
+                    <div ng-if="ctrl.mainSettingForm.$submitted || ctrl.mainSettingForm.$touched"
+                         ng-messages="ctrl.settingForm.stringInput.$error" class="errors">
                         <div ng-message="required">It's a required field.</div>
                         <div ng-message="text">It's a text field.</div>
                     </div>
