Include our saved version of lodash and update to angular-ui-router out of bower.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -90,7 +90,8 @@
 <script src="bower_components/ui-router-extras/release/modular/ct-ui-router-extras.core.min.js"></script>
 <script src="bower_components/ui-router-extras/release/modular/ct-ui-router-extras.previous.min.js"></script>
 <script src="bower_components/ui-router-extras/release/modular/ct-ui-router-extras.transition.min.js"></script>
-<script src="bower_components/lodash/lodash.min.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="assets/js/lodash.min.js"></script>
 <script src="bower_components/angular-socket-io/socket.min.js"></script>
 <script src="assets/js/flow.js"></script>
 <script src="assets/js/select2.min.js"></script>
@@ -99,7 +100,6 @@
 <script src="assets/js/angular/angular-strap.min.js"></script>
 <script src="assets/js/angular/angular-ui.js"></script>
 <script src="assets/js/angular/angular-highlightjs.min.js"></script>
-<script src="assets/js/angular/angular-ui-router.min.0.2.11.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="assets/js/angular/angular-cache-2.3.3.min.js"></script>
 <script src="assets/js/angular/draganddrop.js"></script>
