--- a/website/app/index.html
+++ b/website/app/index.html
@@ -248,5 +248,7 @@
 <script src="application/core/components/properties/partials/display-process-name-directive.js"></script>
 <script src="application/services/mcmodal/existing-process-controller.js"></script>
 <script src="application/services/mcmodal/image-controller.js"></script>
+<script src="application/services/mcmodal/choose-users-controller.js"></script>
+<!-- endbuild -->
 </body>
 </html>
