Add angular-material to app.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -31,8 +31,9 @@
     <link href="bower_components/ag-grid/dist/angular-grid.min.css" rel="stylesheet">
     <link href="bower_components/ag-grid/dist/theme-blue.min.css" rel="stylesheet">
     <link href="bower_components/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet">
+    <link href="bower_components/angular-material/angular-material.min.css" rel="stylesheet">
 
-    <!-- Application style sheet -->
+    <!-- Application style sheets -->
     <link href="assets/css/style-3.css" rel="stylesheet">
     <link href="index/index.css" rel="stylesheet">
     <link href="application/core/projects/project/project.css" rel="stylesheet">
@@ -84,6 +85,9 @@
 <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 <script src="bower_components/angular-messages/angular-messages.min.js"></script>
+<script src="bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="bower_components/angular-aria/angular-aria.min.js"></script>
+<script src="bower_components/angular-material/angular-material.min.js"></script>
 <script src="bower_components/textAngular/dist/textAngular.min.js"></script>
 <script src="bower_components/textAngular/dist/textAngular-sanitize.min.js"></script>
 <script src="bower_components/restangular/dist/restangular.min.js"></script>
