--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -1,73 +1,48 @@
-<div ng-show="email_address" ng-controller="_indexNavigation">
-    <nav class="navbar navbar-custom navbar-fixed-top">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand"
-               ng-click="goHome()">
-                MaterialsCommons
-            </a>
+<md-toolbar layout="row" layout-align="center end" class="toolbar-fixed-">
+    <div class="md-toolbar-tools">
+        <h1><a ng-click="ctrl.home()">MaterialsCommons</a></h1>
+        <span flex-offset="30"></span>
+        <md-input-container md-no-float flex="40" style="padding-bottom:0; margin-bottom: 0">
+            <input placeholder="SEARCH PROJECT..." type="text"
+                   ng-model="ctrl.query"
+                   on-enter="ctrl.search()"
+                   style="color:white; border-bottom-color:white">
+        </md-input-container>
+        <span flex></span>
+        <div layout="row" layout-align="space-around">
+            <md-button>Help</md-button>
+            <md-menu style="z-index: 1000;">
+                <md-button ng-click="$mdOpenMenu($event)">
+                    <md-icon md-font-icon="fa-user" class="fa fa-md-icon"></md-icon>{{email_address}}
+                </md-button>
+                <md-menu-content>
+                    <md-menu-item>
+                        <a ui-sref="account.password">
+                            <i class="fa fa-fw fa-unlock-alt space-right"></i>
+                            Change Password
+                        </a>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <a ui-sref="account.settings">
+                            <i class="fa fa-fw fa-user space-right"></i>
+                            Account Settings
+                        </a>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <a ui-sref="account.apikey">
+                            <i class="fa fa-fw fa-key space-right"></i>
+                            Apikey
+                        </a>
+                    </md-menu-item>
+                    <md-menu-divider></md-menu-divider>
+                    <md-menu-item>
+                        <a ui-sref="logout">
+                            <i class="fa fa-fw fa-sign-out space-right"></i>
+                            Logout
+                        </a>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
         </div>
-
-        <div class="collapse navbar-collapse">
-            <ul ng-show="email_address" class="nav navbar-nav navbar-right">
-                <li>
-                    <a class="no-bold pointer"
-                       ng-click="toggleHelp()">
-                        Help
-                    </a>
-                </li>
-                <li class="dropdown divider">
-                    <a class="dropdown-toggle pointer no-bold" data-toggle="dropdown">
-                        <i class="fa fa-fw fa-user space-right"></i>{{email_address}}
-                        <span class="caret caret-light"></span>
-                    </a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li>
-                            <a ui-sref="account.password">
-                                <i class="fa fa-fw fa-unlock-alt space-right"></i>
-                                Change Password
-                            </a>
-                        </li>
-                        <li>
-                            <a ui-sref="account.settings">
-                                <i class="fa fa-fw fa-user space-right"></i>
-                                Account Settings
-                            </a>
-                        </li>
-
-                        <li ng-if="false">
-                            <a ui-sref="account.templates">
-                                <i class="fa fa-fw fa-list-alt space-right"></i>
-                                Templates
-                            </a>
-                        </li>
-                        <li>
-                            <a ui-sref="account.apikey">
-                                <i class="fa fa-fw fa-key space-right"></i>
-                                Apikey
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a ui-sref="logout">
-                                <i class="fa fa-fw fa-sign-out space-right"></i>
-                                Logout
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <input type="text"
-                   style="margin-right: 6px"
-                   class="col-xs-4 col-md-6 col-lg-6 navbar-right navbar-search"
-                   placeholder="SEARCH PROJECT..."
-                   ng-model="query"
-                   on-enter="search()">
-        </div>
-    </nav>
-</div>
+    </div>
+</md-toolbar>
