--- a/website/app/index.html
+++ b/website/app/index.html
@@ -40,7 +40,7 @@
     <link href="application/core/projects/project/files/files.css" rel="stylesheet">
     <!-- endbuild -->
 </head>
-<body>
+<body layout="column" layout-fill>
 <navbar></navbar>
 
 <md-content layout="column" flex>
