--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -11,7 +11,7 @@
         <span flex></span>
         <div layout="row" layout-align="space-around">
             <md-button>Help</md-button>
-            <md-menu style="z-index: 1000;">
+            <md-menu>
                 <md-button ng-click="$mdOpenMenu($event)">
                     <md-icon md-font-icon="fa-user" class="fa fa-md-icon"></md-icon>{{email_address}}
                 </md-button>
